--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -233,7 +233,7 @@
     }
     .innerPhotos
     {
-      height: 150px;
+      height: 155px;
     }
     .topNav > ul > li > a
     {
@@ -326,6 +326,97 @@
     }
   }
 
+  //Mobile landscape
+  @media screen and (min-width: 419px) and (max-width: 751px) and (max-height: 450px)
+  {
+    html {
+      background-image: url($mobileBackground);
+      background-color: black;
+      font-size: 80%;
+    }
+    .topNav {
+      max-width: 56%;
+    }
+    .topNav > ul > li > a {
+      padding: 0 1px;
+    }
+    .topNav > ul > li > p {
+      padding: 0 1px;
+    }
+    .topNav > ul > li > div {
+      width: 92px;
+    }
+    .topNav > ul > li > div ul > li > a {
+      padding: 7px 1px;
+    }
+    #centerContent {
+      width: 57%;
+      height: 95%;
+      margin: 1.5% auto;
+    }
+    #centerText {
+      max-height: 250px;
+    }
+    .createTitleText {
+      width: 230px;
+    }
+    #centerTextContent {
+      max-height: 150px;
+      padding-left: 3px;
+      padding-right: 3px;
+    }
+    #createBodyText {
+      padding-left: 1px;
+      padding-right: 1px;
+    }
+    #createOptions {
+      max-height: 250px;
+    }
+
+    #leftSide {
+      top: 18%;
+      height: auto;
+      width: 20%;
+      visibility: visible;
+      left: .1em;
+    }
+
+    #rightSide {
+      top: 18%;
+      height: auto;
+      width: 20%;
+      visibility: visible;
+      right: .1em;
+    }
+
+    .innerProfileMenus {
+      height: 70px;
+    }
+    .innerPhotos {
+      height: 120px;
+    }
+    .listResourceLeft {
+      padding-left: 1%;
+      width: 45%;
+    }
+    .interactButton
+    {
+      padding: 3px 1px;
+    }
+    .profileNav > ul > li > a
+    {
+      color: #202020;
+      display: block;
+      line-height: 45px;
+      padding: 1px 10px;
+
+    }
+    .profileNav > ul > li:hover > div
+    {
+      visibility: hidden;
+    }
+  }
+
   //Small screen mobile portrait
   @media screen and (max-width: 465px) and (max-height: 560px) {
     html {
@@ -408,18 +499,15 @@
   }
 
   //Small screen mobile landscape
-  @media screen and (min-width: 467px) and (max-width: 851px) and (max-height: 499px)
+  @media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px)
   {
     html {
       background-image: url($mobileBackground);
       background-color: black;
-    }
-    h2 {
-      font-size: 90%;
+      font-size: 80%;
     }
     .topNav {
-      max-width: 95%;
-      display: none;
+      max-width: 56%;
     }
     .topNav > ul > li > a {
       padding: 0 1px;
@@ -435,17 +523,17 @@
     }
     #centerContent {
       width: 57%;
-      height: 92%;
+      height: 85%;
       margin: 1.5% auto;
     }
     #centerText {
-      max-height: 215px;
+      max-height: 180px;
     }
     .createTitleText {
-      width: 250px;
+      width: 230px;
     }
     #centerTextContent {
-      max-height: 115px;
+      max-height: 100px;
       padding-left: 3px;
       padding-right: 3px;
     }
@@ -454,30 +542,36 @@
       padding-right: 1px;
     }
     #createOptions {
-      max-height: 240px;
+      max-height: 210px;
     }
 
     #leftSide {
-      top: 3%;
+      top: 22%;
       height: auto;
       width: 20%;
       visibility: visible;
       left: .1em;
-      font-size: 100%;
+    }
+    #leftSide h2
+    {
+      display: none;
     }
     #rightSide {
-      top: 3%;
+      top: 22%;
       height: auto;
       width: 20%;
       visibility: visible;
       right: .1em;
-      font-size: 100%;
+    }
+    #rightSide h2
+    {
+      display: none;
     }
     .innerProfileMenus {
       height: 70px;
     }
     .innerPhotos {
-      height: 100px;
+      height: 120px;
     }
     .listResourceLeft {
       padding-left: 1%;
@@ -499,8 +593,8 @@
     {
       visibility: hidden;
     }
-
   }
+
   //Writing screens
   @media screen and (max-width: 465px) and (max-height: 260px) {
     html {
