--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,17 +53,7 @@ p.nav
   cursor: pointer;
 
 }
-.extras
-{
-  margin: 0px;
-  padding: 5px;
-  color: #000000;
-  width: auto;
-  cursor: pointer;
-}
-.extras:hover, .extras.hover_effect {
-  color: #00CC33;
-}
+
 
 .hover {
   -webkit-user-select: none;
@@ -405,7 +395,8 @@ ul.tour
 }
 .infoNav > ul > li
 {
-  width: auto;
+  width: 70%;
+  margin: 0 auto;
   list-style-type: none;
   border-radius:4px;
   -moz-border-radius:4px;
