--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -1,7 +1,7 @@
 #welcome
 {
   width: 30%;
-  min-width: 305px;
+  min-width: 335px;
   height: auto;
   margin: 7.3% auto;
   background-color: #E8E8E8;
@@ -22,7 +22,7 @@
   filter:alpha(opacity=90);
   border: 2px solid;
   border-radius: 25px;
-  min-width: 297px;
+  min-width: 332px;
 }
 h3
 {
@@ -45,7 +45,7 @@ label.login
 }
 .welcomeInputText
 {
-  width: 14em;
+  width: 100%;
 }
 
 .welcomeLink
