--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -406,6 +406,39 @@ ul.tour
   margin: 0 auto;
 }
 
+
+.contentNav
+{
+  margin: 0 auto;
+  display: inline-block;
+}
+.contentNavLeft
+{
+  float: left;
+  clear: left;
+  padding-bottom: 5px;
+}
+.contentNavTitle
+{
+  text-align: center;
+  padding-bottom: 5px;
+  font-weight: 700;
+}
+.contentNavTitleLeft
+{
+  text-align: center;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  font-weight: 700;
+}
+.contentNavRight
+{
+  float: left;
+  clear: left;
+  padding-bottom: 5px;
+  padding-left: 20px;
+}
+
 //Post and Extension footer Nav
 .infoNav
 {
