--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -51,7 +51,14 @@ p.verify
 p.nav
 {
   cursor: pointer;
-
+}
+p.extras
+{
+  margin: 0px;
+  padding: 3px;
+  color: #000000;
+  width: auto;
+  cursor: pointer;
 }
 
 .hover {
@@ -320,6 +327,13 @@ ul.tour
 }
 
 //Index Navigation
+.indexContent
+{
+  font-size: 100%;
+  padding: 10px;
+  display: none;
+
+}
 .indexLeft
 {
   width: 50%;
@@ -361,7 +375,7 @@ ul.tour
   width: 80%;
   height: auto;
   margin: 0 auto;
-  background-color: #808080;
+  background-color: #b3b3b3;
   opacity:0.90;
   filter:alpha(opacity=90);
   border: 2px solid;
