--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -63,7 +63,7 @@
   }
 
   //Small Desktop
-  @media screen and (min-width: 801px) and (max-height: 849px) {
+  @media screen and (min-width: 801px) and (max-width: 1500px) and (max-height: 1400px) {
     html {
       background-image: url($desktopBackground);
       background-color: black;
@@ -123,12 +123,10 @@
   }
 }
 
-
-
 //Tablet Portrait
 @mixin tablet($tabletBackground)
 {
-  @media screen and (max-width: 851px) and (min-height: 600px)
+  @media screen and (max-width: 800px) and (min-height: 600px)
   {
     html
     {
@@ -178,7 +176,6 @@
       right: .01em;
       font-size: 0%;
     }
-
 
     .topNav > ul > li > a
     {
@@ -302,6 +299,10 @@
       height: 84%;
       margin: 1.5% auto;
     }
+    #centerText
+    {
+      max-height: 320px;
+    }
 
     #centerTextContent {
       max-height: 185px;
@@ -315,6 +316,10 @@
     #createOptions {
       max-height: 340px;
     }
+    .createTitleText
+    {
+      width: 100%;
+    }
     #leftSide {
       top: 80%;
       height: 18%;
@@ -322,7 +327,7 @@
       visibility: visible;
       left: .01em;
       font-size: 0%;
-
+      padding-top: 3px;
     }
     #rightSide {
       top: 80%;
@@ -331,6 +336,7 @@
       visibility: visible;
       right: .01em;
       font-size: 0%;
+      padding-top: 3px;
     }
 
     .infoNav > ul > li {
@@ -396,6 +402,7 @@
       border: 2px solid;
       border-radius: 25px;
     }
+
     #centerTextContent {
       max-height: 150px;
       padding-left: 3px;
@@ -455,6 +462,7 @@
 
   //Small screen mobile portrait
   @media screen and (max-width: 465px) and (max-height: 560px) {
+
     html {
       background-image: url($mobileBackground);
       background-color: black;
@@ -478,6 +486,10 @@
       width: 97%;
       height: 84%;
       margin: 1.5% auto;
+    }
+    #centerText
+    {
+      max-height: 260px;
     }
 
     #centerTextContent {
@@ -503,7 +515,7 @@
       padding-right: 1px;
     }
     #createOptions {
-      max-height: 320px;
+      max-height: 300px;
     }
     #leftSide {
       top: 80%;
