Added Maps, updated intolerance with beacon tag, updated beacon manager options

--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -105,6 +105,11 @@
     .innerProfileMenus {
       height: 210px;
     }
+    #mapid
+    {
+      height: 400px;
+      width: 700px;
+    }
     #leftSide {
       height: auto;
     }
@@ -164,7 +169,11 @@
     {
       height: 175px;
     }
-
+    #mapid
+    {
+      height: 400px;
+      width: 600px;
+    }
     #leftSide {
       top: 80%;
       height: 20%;
@@ -219,6 +228,11 @@
     #createOptions
     {
       max-height: 520px;
+    }
+    #mapid
+    {
+      height: 400px;
+      width: 600px;
     }
 
     .formDataContainer
@@ -329,6 +343,11 @@
     {
       max-width: 70%;
     }
+    #mapid
+    {
+      height: 400px;
+      width: 200px;
+    }
     #leftSide {
       top: 80%;
       height: 18%;
@@ -425,10 +444,16 @@
     .createTitleText {
       max-width: 60%;
     }
+
     #createOptions {
       max-height: 250px;
     }
 
+    #mapid
+    {
+      height: 200px;
+      width: 400px;
+    }
     #leftSide {
       top: 18%;
       height: auto;
@@ -503,6 +528,11 @@
     #centerText
     {
       max-height: 260px;
+    }
+    #mapid
+    {
+      height: 200px;
+      width: 100px;
     }
     .createTitleText {
       max-width: 70%;
