Zendesk API integration for support

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -80,6 +80,11 @@ ul.tour
   margin: 0 auto;
 }
 
+.countrySelect
+{
+  max-width: 80%;
+}
+
 //Navigation
 .topNav
 {
@@ -867,7 +872,7 @@ article
 }
 .infoTitleText
 {
-  width: 84%;
+  width: 80%;
 }
 .createSubmit
 {
