--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -585,7 +585,7 @@ ul.tour
 //pagination
 .pagination {
   display: inline-block;
-  padding-left: 0;
+  padding-left: 0px;
   margin: 3px 0;
   border-radius: 4px;
 }
@@ -601,12 +601,13 @@ ul.tour
   position: relative;
   float: left;
   padding: 3px 7px;
-  margin-left: -1px;
+  margin-left: 3px;
   line-height: 1.42857143;
-  color: #202020;
+  color: #FFFFFF;
   text-decoration: none;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: #696969;
+  border: 1px solid #202020;
+  border-radius: 10px;
 }
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
