--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -77,3 +77,24 @@ p.verification
 {
   color: #FFFFFF;
 }
+
+//Media Queries
+
+//Small screen mobile portrait
+@media screen and (max-width: 465px) and (max-height: 540px)
+{
+  #welcome
+  {
+    min-width: 305px;
+  }
+
+  #login
+  {
+    min-width: 298px;
+  }
+}
+//Small screen mobile landscape
+@media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px)
+{
+
+}
