Updated questions, added sorting on Legacy posts

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -134,6 +134,12 @@ ul.tour
   transition: opacity 1s;
 }
 
+#questionContainer
+{
+  margin: 0 auto;
+  width: 50%;
+}
+
 //Table Specific
 table
 {
