Added Sponsor sorting and tags, added analytics for sponsors+beacons, intial prototyping of new categorization

--- a/resources/assets/sass/nav/forms.scss
+++ b/resources/assets/sass/nav/forms.scss
@@ -42,6 +42,14 @@
   padding: 3px;
   font-weight: 500;
 }
+.formCreation
+{
+  display: inline-block;
+  text-align: center;
+  width: auto;
+  padding: 2px;
+  margin: 0 auto;
+}
 
 .formDeletion
 {
