Updated scheduler, commands, mobile tour

--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -111,6 +111,11 @@ p.verification
   {
     min-width: 296px;
   }
+
+  #tour
+  {
+    min-width: 296px;
+  }
 }
 //Small screen mobile landscape
 @media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px)
